// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree props: defaultValue: 1 mutliple: true onChange监听 1`] = `
.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  font-size: 1.2rem;
}

.c8 {
  font-size: 1.4rem;
  cursor: pointer;
  color: #333333;
  width: none;
  box-sizing: border-box;
  padding: 0;
  list-style: none;
  display: inline-block;
  position: relative;
  white-space: nowrap;
  display: inline-block;
  margin-right: 2.142857142857143em;
}

.c8:hover > span span {
  border: 1px solid #4d63ff;
}

.c9 {
  margin: 0;
  outline: none;
  line-height: 1;
  vertical-align: text-bottom;
  display: inline-block;
}

.c12 {
  padding-left: 0.7142857142857143em;
}

.c10 {
  position: absolute;
  left: 0;
  z-index: 1;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.c15 {
  position: relative;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: block;
  width: 1.2857142857142858em;
  height: 1.2857142857142858em;
  border-radius: 0.14285714285714288em;
  background-color: #fff;
  border: 1px solid #cccccc;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15:hover {
  border: 1px solid #4d63ff;
}

.c15::after {
  position: absolute;
  box-sizing: border-box;
  left: 0.35714285714285715em;
  top: 0.14285714285714288em;
  width: 0.4285714285714286em;
  height: 0.7142857142857143em;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all .1s cubic-bezier(.71,-.46,.88,.6);
  transition: all .1s cubic-bezier(.71,-.46,.88,.6);
  display: table;
  border: 0.14285714285714288em solid #fff;
  border-top: 0;
  border-left: 0;
  content: ' ';
}

.c11 {
  position: relative;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: block;
  width: 1.2857142857142858em;
  height: 1.2857142857142858em;
  border-radius: 0.14285714285714288em;
  background-color: #4d63ff;
  border: 1px solid #4d63ff;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11:hover {
  border: 1px solid #4d63ff;
}

.c11::after {
  position: absolute;
  box-sizing: border-box;
  left: 0.2142857142857143em;
  top: 0.5em;
  width: 0.7142857142857143em;
  height: 0.07142857142857144em;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all .2s cubic-bezier(.03,.86,.56,.87);
  transition: all .2s cubic-bezier(.03,.86,.56,.87);
  display: table;
  border: 0.14285714285714288em solid #fff;
  border-top: 0;
  border-left: 0;
  content: ' ';
}

.c17 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c18 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c18:hover {
  background-color: #7a7a7a;
}

.c2 {
  width: 20.833333333333336em;
  font-size: 1.2rem;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  font-size: 1.2rem;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c16 {
  width: 20.833333333333336em;
  font-size: 1.2rem;
  position: absolute;
  display: inline-block;
  left: 19.833333333333336em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c16 {
  opacity: 1;
}

.c3 {
  position: relative;
  top: 0em;
  width: 100%;
  padding: 0;
}

.c6 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin-left: 0.4166666666666667em;
  vertical-align: top;
  margin-right: 0.8333333333333334em;
}

.c14 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin-left: 0.4166666666666667em;
  vertical-align: top;
  margin-right: 0;
  opacity: 0;
}

.c4 {
  margin: 0;
  overflow: hidden;
  padding-right: 1.6666666666666667em;
}

.c5 {
  min-height: 2.8333333333333335em;
  line-height: 2.8333333333333335em;
  list-style: none;
  padding-right: 1em;
  white-space: nowrap;
  outline: 0;
}

.c13 {
  margin: 0;
  padding: 0 0 0 1.5em;
}

<div
  className="c0 c1"
  onWheel={[Function]}
>
  <div
    className="c2"
  >
    <ul
      className="rc-tree c3 c4"
      role="tree-node"
      unselectable="on"
    >
      <li
        className="c5"
        height={35}
        selected={false}
        title="1"
        unselectable="on"
      >
        <span
          className="c6"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_caret_down  c7"
          />
        </span>
        <label
          className="c8"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="c9"
            onClick={null}
          >
            <input
              className="c10"
              disabled={false}
              onBlur={[Function]}
              type="checkbox"
            />
            <span
              checked={false}
              className="c11"
              disabled={false}
            />
          </span>
          <span
            className="c12"
          >
            1
          </span>
        </label>
        <ul
          className="c13"
          data-expanded={true}
        >
          <li
            className="c5"
            height={35}
            selected={false}
            title="1.1"
            unselectable="on"
          >
            <span
              className="c14"
            >
              <i
                className="lugia-icon-direction_caret_down  c7"
              />
            </span>
            <label
              className="c8"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="c9"
                onClick={null}
              >
                <input
                  className="c10"
                  disabled={false}
                  onBlur={[Function]}
                  type="checkbox"
                />
                <span
                  checked={false}
                  className="c15"
                  disabled={false}
                />
              </span>
              <span
                className="c12"
              >
                1.1
              </span>
            </label>
          </li>
          <li
            className="c5"
            height={35}
            selected={false}
            title="1.2"
            unselectable="on"
          >
            <span
              className="c6"
              onClick={[Function]}
            >
              <i
                className="lugia-icon-direction_caret_down  c7"
              />
            </span>
            <label
              className="c8"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="c9"
                onClick={null}
              >
                <input
                  className="c10"
                  disabled={false}
                  onBlur={[Function]}
                  type="checkbox"
                />
                <span
                  checked={false}
                  className="c15"
                  disabled={false}
                />
              </span>
              <span
                className="c12"
              >
                1.2
              </span>
            </label>
            <ul
              className="c13"
              data-expanded={true}
            >
              <li
                className="c5"
                height={35}
                selected={false}
                title="1.2.1"
                unselectable="on"
              >
                <span
                  className="c14"
                >
                  <i
                    className="lugia-icon-direction_caret_down  c7"
                  />
                </span>
                <label
                  className="c8"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="c9"
                    onClick={null}
                  >
                    <input
                      className="c10"
                      disabled={false}
                      onBlur={[Function]}
                      type="checkbox"
                    />
                    <span
                      checked={false}
                      className="c15"
                      disabled={false}
                    />
                  </span>
                  <span
                    className="c12"
                  >
                    1.2.1
                  </span>
                </label>
              </li>
              <li
                className="c5"
                height={35}
                selected={false}
                title="1.2.2"
                unselectable="on"
              >
                <span
                  className="c6"
                  onClick={[Function]}
                >
                  <i
                    className="lugia-icon-direction_caret_down  c7"
                  />
                </span>
                <label
                  className="c8"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="c9"
                    onClick={null}
                  >
                    <input
                      className="c10"
                      disabled={false}
                      onBlur={[Function]}
                      type="checkbox"
                    />
                    <span
                      checked={false}
                      className="c15"
                      disabled={false}
                    />
                  </span>
                  <span
                    className="c12"
                  >
                    1.2.2
                  </span>
                </label>
                <ul
                  className="c13"
                  data-expanded={true}
                >
                  <li
                    className="c5"
                    height={35}
                    selected={false}
                    title="1.2.2.1"
                    unselectable="on"
                  >
                    <span
                      className="c6"
                      onClick={[Function]}
                    >
                      <i
                        className="lugia-icon-direction_caret_down  c7"
                      />
                    </span>
                    <label
                      className="c8"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <span
                        className="c9"
                        onClick={null}
                      >
                        <input
                          className="c10"
                          disabled={false}
                          onBlur={[Function]}
                          type="checkbox"
                        />
                        <span
                          checked={false}
                          className="c15"
                          disabled={false}
                        />
                      </span>
                      <span
                        className="c12"
                      >
                        1.2.2.1
                      </span>
                    </label>
                    <ul
                      className="c13"
                      data-expanded={true}
                    >
                      <li
                        className="c5"
                        height={35}
                        selected={false}
                        title="1.2.2.1.1"
                        unselectable="on"
                      >
                        <span
                          className="c14"
                        >
                          <i
                            className="lugia-icon-direction_caret_down  c7"
                          />
                        </span>
                        <label
                          className="c8"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <span
                            className="c9"
                            onClick={null}
                          >
                            <input
                              className="c10"
                              disabled={false}
                              onBlur={[Function]}
                              type="checkbox"
                            />
                            <span
                              checked={false}
                              className="c15"
                              disabled={false}
                            />
                          </span>
                          <span
                            className="c12"
                          >
                            1.2.2.1.1
                          </span>
                        </label>
                      </li>
                      <li
                        className="c5"
                        height={35}
                        selected={false}
                        title="1.2.2.1.2"
                        unselectable="on"
                      >
                        <span
                          className="c14"
                        >
                          <i
                            className="lugia-icon-direction_caret_down  c7"
                          />
                        </span>
                        <label
                          className="c8"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <span
                            className="c9"
                            onClick={null}
                          >
                            <input
                              className="c10"
                              disabled={false}
                              onBlur={[Function]}
                              type="checkbox"
                            />
                            <span
                              checked={false}
                              className="c15"
                              disabled={false}
                            />
                          </span>
                          <span
                            className="c12"
                          >
                            1.2.2.1.2
                          </span>
                        </label>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    className="c16"
  >
    <div
      className="c17"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "20.833333333333336em",
        }
      }
    >
      <div
        className="c18"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "4.916666666666667em",
            "top": "0em",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Tree props: query: 2.1.2.1 expandAll: true mutliple: false 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  font-size: 1.2rem;
}

.c0 {
  overflow: hidden;
  font-size: 1.2rem;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c1 {
  position: relative;
  top: 0em;
  width: 100%;
  padding: 0;
}

.c4 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin-left: 0.4166666666666667em;
  vertical-align: top;
  margin-right: 0;
}

.c9 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin-left: 0.4166666666666667em;
  vertical-align: top;
  margin-right: 0;
  opacity: 0;
}

.c2 {
  margin: 0;
  overflow: hidden;
  padding-right: 1.6666666666666667em;
}

.c3 {
  min-height: 2.8333333333333335em;
  line-height: 2.8333333333333335em;
  list-style: none;
  padding-right: 1em;
  white-space: nowrap;
  outline: 0;
}

.c8 {
  margin: 0;
  padding: 0 0 0 1.5em;
}

.c6 {
  width: 100%;
  overflow: hidden;
  vertical-align: top;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  padding-left: 0.8333333333333334em;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  font-size: 1.1666666666666667em;
  cursor: pointer;
  color: #666666;
  border-radius: 0.33333333333333337em;
}

.c6:hover {
  background-color: rgba(77,99,255,0.05);
}

.c7 {
  opacity: 1;
}

<div
  className="c0"
  onWheel={[Function]}
>
  <ul
    className="rc-tree c1 rc-tree-show-line c2"
    role="tree-node"
    unselectable="on"
  >
    <li
      className="c3"
      height={35}
      selected={false}
      title="2"
      unselectable="on"
    >
      <span
        className="c4"
        onClick={[Function]}
      >
        <i
          className="lugia-icon-direction_caret_down  c5"
        />
      </span>
      <span
        className="c6"
        disabled={false}
        onClick={[Function]}
        onContextMenu={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        selected={false}
        shape="default"
        title="2"
      >
        <span
          className="c7"
          height={35}
          selected={false}
          title="2"
        >
          2
        </span>
      </span>
      <ul
        className="c8"
        data-expanded={true}
      >
        <li
          className="c3"
          height={35}
          selected={false}
          title="2.1"
          unselectable="on"
        >
          <span
            className="c4"
            onClick={[Function]}
          >
            <i
              className="lugia-icon-direction_caret_down  c5"
            />
          </span>
          <span
            className="c6"
            disabled={false}
            onClick={[Function]}
            onContextMenu={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            selected={false}
            shape="default"
            title="2.1"
          >
            <span
              className="c7"
              height={35}
              selected={false}
              title="2.1"
            >
              2.1
            </span>
          </span>
          <ul
            className="c8"
            data-expanded={true}
          >
            <li
              className="c3"
              height={35}
              selected={false}
              title="2.1.2"
              unselectable="on"
            >
              <span
                className="c4"
                onClick={[Function]}
              >
                <i
                  className="lugia-icon-direction_caret_down  c5"
                />
              </span>
              <span
                className="c6"
                disabled={false}
                onClick={[Function]}
                onContextMenu={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                selected={false}
                shape="default"
                title="2.1.2"
              >
                <span
                  className="c7"
                  height={35}
                  selected={false}
                  title="2.1.2"
                >
                  2.1.2
                </span>
              </span>
              <ul
                className="c8"
                data-expanded={true}
              >
                <li
                  className="c3"
                  height={35}
                  selected={false}
                  title="2.1.2.1"
                  unselectable="on"
                >
                  <span
                    className="c9"
                  >
                    <i
                      className="lugia-icon-direction_caret_down  c5"
                    />
                  </span>
                  <span
                    className="c6"
                    disabled={false}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    selected={false}
                    shape="default"
                    title="2.1.2.1"
                  >
                    <span
                      className="c7"
                      height={35}
                      selected={false}
                      title="2.1.2.1"
                    >
                      2.1.2.1
                    </span>
                  </span>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Tree props: value: 1 mutliple: false onChange监听 limit 1`] = `
Array [
  .c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  font-size: 1.2rem;
}

.c14 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c15 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c15:hover {
  background-color: #7a7a7a;
}

.c2 {
  width: 20.833333333333336em;
  font-size: 1.2rem;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  font-size: 1.2rem;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c13 {
  width: 20.833333333333336em;
  font-size: 1.2rem;
  position: absolute;
  display: inline-block;
  left: 19.833333333333336em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c13 {
  opacity: 1;
}

.c3 {
  position: relative;
  top: 0em;
  width: 100%;
  padding: 0;
}

.c6 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin-left: 0.4166666666666667em;
  vertical-align: top;
  margin-right: 0;
}

.c11 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin-left: 0.4166666666666667em;
  vertical-align: top;
  margin-right: 0;
  opacity: 0;
}

.c4 {
  margin: 0;
  overflow: hidden;
  padding-right: 1.6666666666666667em;
}

.c5 {
  min-height: 2.8333333333333335em;
  line-height: 2.8333333333333335em;
  list-style: none;
  padding-right: 1em;
  white-space: nowrap;
  outline: 0;
}

.c10 {
  margin: 0;
  padding: 0 0 0 1.5em;
}

.c12 {
  width: 100%;
  overflow: hidden;
  vertical-align: top;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  padding-left: 0.8333333333333334em;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  font-size: 1.1666666666666667em;
  cursor: pointer;
  color: #666666;
  border-radius: 0.33333333333333337em;
}

.c12:hover {
  background-color: rgba(77,99,255,0.05);
}

.c8 {
  width: 100%;
  overflow: hidden;
  vertical-align: top;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  padding-left: 0.8333333333333334em;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  font-size: 1.1666666666666667em;
  cursor: pointer;
  color: #666666;
  border-radius: 0.33333333333333337em;
  background-color: rgba(77,99,255,0.2);
}

.c9 {
  opacity: 1;
}

<div
    className="c0 c1"
    onWheel={[Function]}
  >
    <div
      className="c2"
    >
      <ul
        className="rc-tree c3 c4"
        role="tree-node"
        unselectable="on"
      >
        <li
          className="c5"
          height={35}
          selected={true}
          title="1"
          unselectable="on"
        >
          <span
            className="c6"
            onClick={[Function]}
          >
            <i
              className="lugia-icon-direction_caret_down  c7"
            />
          </span>
          <span
            className="c8"
            disabled={false}
            onClick={[Function]}
            onContextMenu={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            selected={true}
            shape="default"
            title="1"
          >
            <span
              className="c9"
              height={35}
              selected={true}
              title="1"
            >
              1
            </span>
          </span>
          <ul
            className="c10"
            data-expanded={true}
          >
            <li
              className="c5"
              height={35}
              selected={false}
              title="1.1"
              unselectable="on"
            >
              <span
                className="c11"
              >
                <i
                  className="lugia-icon-direction_caret_down  c7"
                />
              </span>
              <span
                className="c12"
                disabled={false}
                onClick={[Function]}
                onContextMenu={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                selected={false}
                shape="default"
                title="1.1"
              >
                <span
                  className="c9"
                  height={35}
                  selected={false}
                  title="1.1"
                >
                  1.1
                </span>
              </span>
            </li>
            <li
              className="c5"
              height={35}
              selected={false}
              title="1.2"
              unselectable="on"
            >
              <span
                className="c6"
                onClick={[Function]}
              >
                <i
                  className="lugia-icon-direction_caret_down  c7"
                />
              </span>
              <span
                className="c12"
                disabled={false}
                onClick={[Function]}
                onContextMenu={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                selected={false}
                shape="default"
                title="1.2"
              >
                <span
                  className="c9"
                  height={35}
                  selected={false}
                  title="1.2"
                >
                  1.2
                </span>
              </span>
              <ul
                className="c10"
                data-expanded={true}
              >
                <li
                  className="c5"
                  height={35}
                  selected={false}
                  title="1.2.1"
                  unselectable="on"
                >
                  <span
                    className="c11"
                  >
                    <i
                      className="lugia-icon-direction_caret_down  c7"
                    />
                  </span>
                  <span
                    className="c12"
                    disabled={false}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    selected={false}
                    shape="default"
                    title="1.2.1"
                  >
                    <span
                      className="c9"
                      height={35}
                      selected={false}
                      title="1.2.1"
                    >
                      1.2.1
                    </span>
                  </span>
                </li>
                <li
                  className="c5"
                  height={35}
                  selected={false}
                  title="1.2.2"
                  unselectable="on"
                >
                  <span
                    className="c6"
                    onClick={[Function]}
                  >
                    <i
                      className="lugia-icon-direction_caret_down  c7"
                    />
                  </span>
                  <span
                    className="c12"
                    disabled={false}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    selected={false}
                    shape="default"
                    title="1.2.2"
                  >
                    <span
                      className="c9"
                      height={35}
                      selected={false}
                      title="1.2.2"
                    >
                      1.2.2
                    </span>
                  </span>
                  <ul
                    className="c10"
                    data-expanded={true}
                  >
                    <li
                      className="c5"
                      height={35}
                      selected={false}
                      title="1.2.2.1"
                      unselectable="on"
                    >
                      <span
                        className="c6"
                        onClick={[Function]}
                      >
                        <i
                          className="lugia-icon-direction_caret_down  c7"
                        />
                      </span>
                      <span
                        className="c12"
                        disabled={false}
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        selected={false}
                        shape="default"
                        title="1.2.2.1"
                      >
                        <span
                          className="c9"
                          height={35}
                          selected={false}
                          title="1.2.2.1"
                        >
                          1.2.2.1
                        </span>
                      </span>
                      <ul
                        className="c10"
                        data-expanded={true}
                      >
                        <li
                          className="c5"
                          height={35}
                          selected={false}
                          title="1.2.2.1.1"
                          unselectable="on"
                        >
                          <span
                            className="c11"
                          >
                            <i
                              className="lugia-icon-direction_caret_down  c7"
                            />
                          </span>
                          <span
                            className="c12"
                            disabled={false}
                            onClick={[Function]}
                            onContextMenu={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            selected={false}
                            shape="default"
                            title="1.2.2.1.1"
                          >
                            <span
                              className="c9"
                              height={35}
                              selected={false}
                              title="1.2.2.1.1"
                            >
                              1.2.2.1.1
                            </span>
                          </span>
                        </li>
                        <li
                          className="c5"
                          height={35}
                          selected={false}
                          title="1.2.2.1.2"
                          unselectable="on"
                        >
                          <span
                            className="c11"
                          >
                            <i
                              className="lugia-icon-direction_caret_down  c7"
                            />
                          </span>
                          <span
                            className="c12"
                            disabled={false}
                            onClick={[Function]}
                            onContextMenu={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            selected={false}
                            shape="default"
                            title="1.2.2.1.2"
                          >
                            <span
                              className="c9"
                              height={35}
                              selected={false}
                              title="1.2.2.1.2"
                            >
                              1.2.2.1.2
                            </span>
                          </span>
                        </li>
                      </ul>
                    </li>
                  </ul>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <div
      className="c13"
    >
      <div
        className="c14"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseOut={[Function]}
        onMouseUp={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "height": "20.833333333333336em",
          }
        }
      >
        <div
          className="c15"
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "4.916666666666667em",
              "top": "0em",
            }
          }
        />
      </div>
    </div>
  </div>,
  <button
    onClick={[Function]}
  />,
]
`;

exports[`Tree props: value: 1 mutliple: true onChange监听 limit 1`] = `
.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  font-size: 1.2rem;
}

.c8 {
  font-size: 1.4rem;
  cursor: pointer;
  color: #333333;
  width: none;
  box-sizing: border-box;
  padding: 0;
  list-style: none;
  display: inline-block;
  position: relative;
  white-space: nowrap;
  display: inline-block;
  margin-right: 2.142857142857143em;
}

.c8:hover > span span {
  border: 1px solid #4d63ff;
}

.c9 {
  margin: 0;
  outline: none;
  line-height: 1;
  vertical-align: text-bottom;
  display: inline-block;
}

.c12 {
  padding-left: 0.7142857142857143em;
}

.c10 {
  position: absolute;
  left: 0;
  z-index: 1;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.c15 {
  position: relative;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: block;
  width: 1.2857142857142858em;
  height: 1.2857142857142858em;
  border-radius: 0.14285714285714288em;
  background-color: #fff;
  border: 1px solid #cccccc;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15:hover {
  border: 1px solid #4d63ff;
}

.c15::after {
  position: absolute;
  box-sizing: border-box;
  left: 0.35714285714285715em;
  top: 0.14285714285714288em;
  width: 0.4285714285714286em;
  height: 0.7142857142857143em;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all .1s cubic-bezier(.71,-.46,.88,.6);
  transition: all .1s cubic-bezier(.71,-.46,.88,.6);
  display: table;
  border: 0.14285714285714288em solid #fff;
  border-top: 0;
  border-left: 0;
  content: ' ';
}

.c11 {
  position: relative;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: block;
  width: 1.2857142857142858em;
  height: 1.2857142857142858em;
  border-radius: 0.14285714285714288em;
  background-color: #4d63ff;
  border: 1px solid #4d63ff;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11:hover {
  border: 1px solid #4d63ff;
}

.c11::after {
  position: absolute;
  box-sizing: border-box;
  left: 0.2142857142857143em;
  top: 0.5em;
  width: 0.7142857142857143em;
  height: 0.07142857142857144em;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all .2s cubic-bezier(.03,.86,.56,.87);
  transition: all .2s cubic-bezier(.03,.86,.56,.87);
  display: table;
  border: 0.14285714285714288em solid #fff;
  border-top: 0;
  border-left: 0;
  content: ' ';
}

.c17 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c18 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c18:hover {
  background-color: #7a7a7a;
}

.c2 {
  width: 20.833333333333336em;
  font-size: 1.2rem;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  font-size: 1.2rem;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c16 {
  width: 20.833333333333336em;
  font-size: 1.2rem;
  position: absolute;
  display: inline-block;
  left: 19.833333333333336em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c16 {
  opacity: 1;
}

.c3 {
  position: relative;
  top: 0em;
  width: 100%;
  padding: 0;
}

.c6 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin-left: 0.4166666666666667em;
  vertical-align: top;
  margin-right: 0.8333333333333334em;
}

.c14 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin-left: 0.4166666666666667em;
  vertical-align: top;
  margin-right: 0;
  opacity: 0;
}

.c4 {
  margin: 0;
  overflow: hidden;
  padding-right: 1.6666666666666667em;
}

.c5 {
  min-height: 2.8333333333333335em;
  line-height: 2.8333333333333335em;
  list-style: none;
  padding-right: 1em;
  white-space: nowrap;
  outline: 0;
}

.c13 {
  margin: 0;
  padding: 0 0 0 1.5em;
}

<div
  className="c0 c1"
  onWheel={[Function]}
>
  <div
    className="c2"
  >
    <ul
      className="rc-tree c3 c4"
      role="tree-node"
      unselectable="on"
    >
      <li
        className="c5"
        height={35}
        selected={false}
        title="1"
        unselectable="on"
      >
        <span
          className="c6"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_caret_down  c7"
          />
        </span>
        <label
          className="c8"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="c9"
            onClick={null}
          >
            <input
              className="c10"
              disabled={false}
              onBlur={[Function]}
              type="checkbox"
            />
            <span
              checked={false}
              className="c11"
              disabled={false}
            />
          </span>
          <span
            className="c12"
          >
            1
          </span>
        </label>
        <ul
          className="c13"
          data-expanded={true}
        >
          <li
            className="c5"
            height={35}
            selected={false}
            title="1.1"
            unselectable="on"
          >
            <span
              className="c14"
            >
              <i
                className="lugia-icon-direction_caret_down  c7"
              />
            </span>
            <label
              className="c8"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="c9"
                onClick={null}
              >
                <input
                  className="c10"
                  disabled={false}
                  onBlur={[Function]}
                  type="checkbox"
                />
                <span
                  checked={false}
                  className="c15"
                  disabled={false}
                />
              </span>
              <span
                className="c12"
              >
                1.1
              </span>
            </label>
          </li>
          <li
            className="c5"
            height={35}
            selected={false}
            title="1.2"
            unselectable="on"
          >
            <span
              className="c6"
              onClick={[Function]}
            >
              <i
                className="lugia-icon-direction_caret_down  c7"
              />
            </span>
            <label
              className="c8"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="c9"
                onClick={null}
              >
                <input
                  className="c10"
                  disabled={false}
                  onBlur={[Function]}
                  type="checkbox"
                />
                <span
                  checked={false}
                  className="c15"
                  disabled={false}
                />
              </span>
              <span
                className="c12"
              >
                1.2
              </span>
            </label>
            <ul
              className="c13"
              data-expanded={true}
            >
              <li
                className="c5"
                height={35}
                selected={false}
                title="1.2.1"
                unselectable="on"
              >
                <span
                  className="c14"
                >
                  <i
                    className="lugia-icon-direction_caret_down  c7"
                  />
                </span>
                <label
                  className="c8"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="c9"
                    onClick={null}
                  >
                    <input
                      className="c10"
                      disabled={false}
                      onBlur={[Function]}
                      type="checkbox"
                    />
                    <span
                      checked={false}
                      className="c15"
                      disabled={false}
                    />
                  </span>
                  <span
                    className="c12"
                  >
                    1.2.1
                  </span>
                </label>
              </li>
              <li
                className="c5"
                height={35}
                selected={false}
                title="1.2.2"
                unselectable="on"
              >
                <span
                  className="c6"
                  onClick={[Function]}
                >
                  <i
                    className="lugia-icon-direction_caret_down  c7"
                  />
                </span>
                <label
                  className="c8"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="c9"
                    onClick={null}
                  >
                    <input
                      className="c10"
                      disabled={false}
                      onBlur={[Function]}
                      type="checkbox"
                    />
                    <span
                      checked={false}
                      className="c15"
                      disabled={false}
                    />
                  </span>
                  <span
                    className="c12"
                  >
                    1.2.2
                  </span>
                </label>
                <ul
                  className="c13"
                  data-expanded={true}
                >
                  <li
                    className="c5"
                    height={35}
                    selected={false}
                    title="1.2.2.1"
                    unselectable="on"
                  >
                    <span
                      className="c6"
                      onClick={[Function]}
                    >
                      <i
                        className="lugia-icon-direction_caret_down  c7"
                      />
                    </span>
                    <label
                      className="c8"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <span
                        className="c9"
                        onClick={null}
                      >
                        <input
                          className="c10"
                          disabled={false}
                          onBlur={[Function]}
                          type="checkbox"
                        />
                        <span
                          checked={false}
                          className="c15"
                          disabled={false}
                        />
                      </span>
                      <span
                        className="c12"
                      >
                        1.2.2.1
                      </span>
                    </label>
                    <ul
                      className="c13"
                      data-expanded={true}
                    >
                      <li
                        className="c5"
                        height={35}
                        selected={false}
                        title="1.2.2.1.1"
                        unselectable="on"
                      >
                        <span
                          className="c14"
                        >
                          <i
                            className="lugia-icon-direction_caret_down  c7"
                          />
                        </span>
                        <label
                          className="c8"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <span
                            className="c9"
                            onClick={null}
                          >
                            <input
                              className="c10"
                              disabled={false}
                              onBlur={[Function]}
                              type="checkbox"
                            />
                            <span
                              checked={false}
                              className="c15"
                              disabled={false}
                            />
                          </span>
                          <span
                            className="c12"
                          >
                            1.2.2.1.1
                          </span>
                        </label>
                      </li>
                      <li
                        className="c5"
                        height={35}
                        selected={false}
                        title="1.2.2.1.2"
                        unselectable="on"
                      >
                        <span
                          className="c14"
                        >
                          <i
                            className="lugia-icon-direction_caret_down  c7"
                          />
                        </span>
                        <label
                          className="c8"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <span
                            className="c9"
                            onClick={null}
                          >
                            <input
                              className="c10"
                              disabled={false}
                              onBlur={[Function]}
                              type="checkbox"
                            />
                            <span
                              checked={false}
                              className="c15"
                              disabled={false}
                            />
                          </span>
                          <span
                            className="c12"
                          >
                            1.2.2.1.2
                          </span>
                        </label>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    className="c16"
  >
    <div
      className="c17"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "20.833333333333336em",
        }
      }
    >
      <div
        className="c18"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "4.916666666666667em",
            "top": "0em",
          }
        }
      />
    </div>
  </div>
</div>
`;
